--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -3,12 +3,6 @@
 
 {% block body %}
     <h2>{{ request.user.email }}</h2>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <span id="message" ></span>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
     <button class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
     <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
     <button class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
@@ -17,6 +11,7 @@
     <hr>
 
     <div id="emails-view">
+        <p id="message"></p>
     </div>
 
     <div id="compose-view">
