--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -6,10 +6,17 @@
         <title>{% block title %}Mail{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'mail/styles.css' %}">
+        <link href='https://fonts.googleapis.com/css?family=Alegreya Sans SC' rel='stylesheet'>
         {% block script %}
         {% endblock %}
     </head>
-    <body>
+    <style>
+        body {
+        font-family: 'Alegreya Sans SC';font-size: 22px;
+    }
+    </style>
+    
+    <body style="background-color:rgb(221, 234, 235); ">
         <div class="container">
             {% block body %}
             {% endblock %}
